@@ -2,3 +2,5 @@
 .project
 build
 test_progs
+MANIFEST
+dist
