@@ -1,0 +1,17 @@
+=========
+astviewer
+=========
+
+GUI for browser Python Abstract Syntax Trees (ASTs).
+
+Requires: PySide or PyQt5
+
+Installation: pip install astviewer
+
+Example use:
+
+::
+    %> pyastviewer myprog.py
+
+For more examples see: https://github.com/titusjan/astviewer
+
